name:                LeaseAPI
version:             0.1.0.0
synopsis:            A simple API for updating and querying information about 
                     your car lease
description:         A CRUD app which interacts with a SQLite database and
                     provides a RESTful API to allow updates and queries of car
                     lease data.
homepage:            https://github.com/thomas-dean/LeaseAPI#readme
license:             BSD3
license-file:        LICENSE
author:              Thomas Dean
maintainer:          tommydean_sd@yahoo.com
copyright:           2017 Thomas Dean
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable LeaseAPI-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , LeaseAPI
  default-language:    Haskell2010

test-suite LeaseAPI-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , LeaseAPI
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/thomas-dean/LeaseAPI
